# whisper.cpp__MQTT-streamer__local-agreement-with-finality

examples/: CMakeLists.txt
examples/stream-with-finality/: CMakeLists.txt  README.md  driver.cpp  driver.hpp  launchXpanesSplit.sh  localConsensusByN.cpp  localConsensusByN.hpp  overlapIndex.cpp  overlapIndex.hpp  simpleTcpDebug.cpp  simpleTcpDebug.hpp  stream.cpp  streamWithFinality.sh
examples/stream-with-finality/test/: test__driver.cpp  test__localConsensusByN.cpp  test__overlapIndex.cpp  test__simpleTcpDebug.cpp
examples/stream-with-finality/test/data/driver/: test_0.toml
